Added Google Books API integration + script file

--- a/book-catalogue/index.html
+++ b/book-catalogue/index.html
@@ -17,7 +17,9 @@
         <div class="book-list">
             <h2 class="text-text text-center mt-2">Search Results</h2>
             <div id="list-output">
-                <div class="row"></div>
+                <div class="row">
+                    <!--Card-->
+                </div>
             </div>
         </div>
 
@@ -32,5 +34,9 @@
     <!--Google fonts used-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
