Fixed search + result display

--- a/book-catalogue/index.html
+++ b/book-catalogue/index.html
@@ -37,6 +37,7 @@
 
     <div class="container">
         <h1 id="title" class="text-center mt-5">Find your book!</h1>
+        <p class="text-center">Search your book by the title</p>
         <div class="row">
             <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
                 <input id="search-box" type="text" class="form-control" placeholder="Search...">
