Added structure for About page

--- a/book-catalogue/public/about.html
+++ b/book-catalogue/public/about.html
@@ -34,8 +34,21 @@
           </ul>
         </div>
     </nav>
+    <div class="container mt-5">
+      <h1 id="title" class="text-center">About us</h1>
+        <div class="row">
+          <div class="col-md-6">
+            <img id="intro-img" src="../assets/images/about-us.png" alt="Digital Library"></img>
+          </div>
+          <div class="col-md-6">
+            <p id="intro-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut pellentesque orci. Nam eget semper velit. Curabitur efficitur tincidunt enim a tempus. Sed nec quam tortor. Praesent vitae ex purus. Fusce molestie efficitur lorem. Nulla at lacus vitae nibh porttitor fermentum. Phasellus sed hendrerit magna, non tincidunt libero. Mauris et dignissim lectus. Nunc vehicula, purus et ultrices ornare, libero erat hendrerit arcu, vitae pulvinar arcu libero ac nisl. Mauris fermentum leo sit amet erat aliquam pellentesque. Donec diam dui, imperdiet ac odio ac, pretium commodo sem.
+            </p>
+          </div>
+        </div>
+    </div>
 
     <!--Personal CSS-->
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </body>
 </html>
