--- a/book-catalogue/public/author.html
+++ b/book-catalogue/public/author.html
@@ -35,6 +35,6 @@
         </div>
     </nav>
 
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </body>
 </html>
