Implemented Random Book Generator page

--- a/book-catalogue/public/about.html
+++ b/book-catalogue/public/about.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <!--Personal CSS-->
+    <!--CSS-->
     <link rel="stylesheet" type="text/css" href="../style.css">
 </body>
 </html>
