fixed result display + modified search query

--- a/book-catalogue/public/author.html
+++ b/book-catalogue/public/author.html
@@ -37,5 +37,8 @@
 
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <!--Google fonts used-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 </body>
 </html>
