--- a/book-catalogue/public/about.html
+++ b/book-catalogue/public/about.html
@@ -50,5 +50,8 @@
 
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <!--Google fonts used-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 </body>
 </html>
