--- a/book-catalogue/public/random.html
+++ b/book-catalogue/public/random.html
@@ -69,5 +69,8 @@
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../app.js"></script>
+    <!--Google fonts used-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </body>
 </html>
