Added author search

--- a/book-catalogue/index.html
+++ b/book-catalogue/index.html
@@ -54,7 +54,7 @@
             id="search-box"
             type="text"
             class="form-control"
-            placeholder="Search..."
+            placeholder="Search title..."
           />
           <button id="search" class="btn btn-primary" onclick="">Search</button>
         </div>
@@ -67,6 +67,8 @@
             <!--Card-->
           </div>
         </div>
+      </div>
+    </div>
 
     <!--JQuery integration-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
