--- a/book-catalogue/public/about.html
+++ b/book-catalogue/public/about.html
@@ -42,7 +42,9 @@
           </div>
           <div class="col-md-6">
             <p id="intro-paragraph">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut pellentesque orci. Nam eget semper velit. Curabitur efficitur tincidunt enim a tempus. Sed nec quam tortor. Praesent vitae ex purus. Fusce molestie efficitur lorem. Nulla at lacus vitae nibh porttitor fermentum. Phasellus sed hendrerit magna, non tincidunt libero. Mauris et dignissim lectus. Nunc vehicula, purus et ultrices ornare, libero erat hendrerit arcu, vitae pulvinar arcu libero ac nisl. Mauris fermentum leo sit amet erat aliquam pellentesque. Donec diam dui, imperdiet ac odio ac, pretium commodo sem.
+              BookCatalogue is a digital library powered by GoogleBooks API that allows you to search for books by title, author, or get a random book.  
+              Our goal is to help you find any book you want to recommend to your friends and maybe your next read
+              Happy reading!
             </p>
           </div>
         </div>
