--- a/book-catalogue/public/random.html
+++ b/book-catalogue/public/random.html
@@ -46,7 +46,7 @@
     </nav>
 
     <div class="container mt-5">
-      <h1 id="title" class="text-center">Random Book Generator</h1>
+      <h1 id="title" class="text-center mt-5">Random Book Generator</h1>
       <div class="text-center">
         <p class="text-center">
           Unsure of what to read next? Click the button below to get a random
@@ -66,6 +66,10 @@
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <link rel="stylesheet" type="text/css" href="./css/random-page.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../app.js"></script>
