--- a/book-catalogue/public/author.html
+++ b/book-catalogue/public/author.html
@@ -35,8 +35,40 @@
         </div>
     </nav>
 
+    <div class="container">
+      <h1 id="title" class="text-center mt-5">Find by author!</h1>
+      <p class="text-center">Find books by your favorite author</p>
+      <div class="row">
+        <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
+          <input
+            id="search-box"
+            type="text"
+            class="form-control"
+            placeholder="Search author..."
+          />
+          <button id="author-search" class="btn btn-primary" onclick="">Search</button>
+        </div>
+      </div>
+      </div>
+      <div class="book-list">
+        <h2 class="text-text text-center mt-2">Search Results</h2>
+        <div id="list-output">
+          <div class="row">
+            <!--Card-->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../app.js"></script>
     <!--Google fonts used-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
