--- a/book-catalogue/public/about.html
+++ b/book-catalogue/public/about.html
@@ -43,7 +43,8 @@
           <div class="col-md-6">
             <p id="intro-paragraph">
               BookCatalogue is a digital library powered by GoogleBooks API that allows you to search for books by title, author, or get a random book.  
-              Our goal is to help you find any book you want to recommend to your friends and maybe your next read
+              Our goal is to help you find any book you want to recommend to your friends and maybe your next read.
+              </br>
               Happy reading!
             </p>
           </div>
